# crewAI_tutorial

./: pyproject.toml
crewai_course/: basics_01.py  basics_02.py  basics_03.py
